[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/NPCInteractUI.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5000.0

[node name="NPC" type="Node2D"]
script = ExtResource( 1 )

[node name="NPCInteractUI" parent="." instance=ExtResource( 2 )]
visible = false

[node name="VisionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="VisionArea2D" to="." method="_on_VisionArea2D_body_entered"]
